<resources>
    <string name="app_name">ESS Loyalty Program</string>
    <string name="transactions">Transactions</string>
    <string name="bank">Bank</string>
    <string name="redeem">Redeem</string>
    <string name="available_points">Available points</string>
    <string name="bell">Bell</string>
    <string name="home">Home</string>
    <string name="promotional_offers">Offers</string>
    <string name="bank_fill">Bank</string>
    <string name="catalog">Catalog</string>
    <string name="refer">Refer</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_capital">LOGIN</string>
    <string name="enter_your_mobile_no">Enter your mobile no</string>
    <string name="please_enter_your_phone_number">Please enter your phone number.</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pincode">Pincode</string>
    <string name="district">District</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="loading_message">Loading...</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="verify">Verify</string>
    <string name="an_otp_has_been_sent_to_your_mobile_no">An OTP has been sent to your mobile no</string>
    <string name="resend">Resend</string>
    <string name="notifications">Notifications</string>
    <string name="no_data">No Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="plumber_group">PLUMBER GROUP</string>
    <string name="notification">Notification</string>
    <string name="announcements">Announcements</string>
    <string name="catalogue">Catalogue</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version_1_0">VERSION 1.0</string>
    <string name="logout">Logout</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="contact_us">Contact Us</string>
    <string name="kyc_pending">KYC Pending</string>
    <string name="please_enter_a_valid_no">Please enter a valid no</string>
    <string name="failed_to_send_otp">Failed to send OTP, please try again</string>
    <string name="failed_to_send_otp_and_message">"Failed to send OTP "</string>
    <string name="you_donot_have_account_create_one">You don\'t have any account please create one.</string>
    <string name="failed_to_send_otp_please_try_again">Failed to send OTP, please try again</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong, please try again later</string>
    <string name="please_enter_your_otp">Please Enter Your OTP</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="invalid_pincode">Invalid Pincode</string>
    <string name="enter_disrict">Enter District</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_city">Enter City</string>
    <string name="you_already_have_an_account_please_login">You already have an account please login</string>
    <string name="please_check_your_internet_connection">Something went wrong, please check your internet and try again</string>
    <string name="basic_profile">Basic Profile</string>
    <string name="address">Address</string>
    <string name="kyc_details">KYC Details</string>
</resources>