<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/icon_no_user"
                android:layout_margin="8dp"
                android:id="@+id/profile"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="User"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:id="@+id/userName"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_qr"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                android:backgroundTint="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="3dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kyc_pending"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:layout_marginEnd="8dp"
                        android:id="@+id/kycStatus"/>
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:id="@+id/kycImage"
                        android:src="@drawable/icon_kyc_pending"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/edtProfile"
                android:orientation="horizontal"
                android:gravity="end|center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:padding="5dp"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_pencil" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginStart="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="12sp"
                android:id="@+id/phoneNo"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.materialswitch.MaterialSwitch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:paddingVertical="@dimen/_18sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:id="@+id/notificationSwitch"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#B3B3B3"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/announcements"
                    android:textColor="@color/black"
                    android:id="@+id/announcement"
                    android:paddingVertical="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_15sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/catalogue"
                    android:textColor="@color/black"
                    android:id="@+id/catalog"
                    android:paddingVertical="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_15sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_support"
                    android:id="@+id/helpAndSupport"
                    android:textColor="@color/black"
                    android:paddingVertical="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_15sdp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#B3B3B3"
                android:layout_marginVertical="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:id="@+id/aboutUs"
                    android:textColor="@color/gray"
                    android:padding="@dimen/_15sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:id="@+id/privacy"
                    android:textColor="@color/gray"

                    android:padding="@dimen/_15sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:id="@+id/contact"

                    android:textColor="@color/gray"
                    android:padding="@dimen/_15sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_use"
                    android:id="@+id/termsOfUse"
                    android:textColor="@color/gray"

                    android:padding="@dimen/_15sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:id="@+id/logout"
                    android:textColor="@color/gray"
                    android:padding="@dimen/_15sdp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_1_0"
                android:layout_marginVertical="@dimen/_10sdp"
                android:id="@+id/version"

                android:textColor="@color/gray"
                android:padding="@dimen/_15sdp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>