<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/scrollView"
    android:scrollbars="none"
    android:background="#EDEDED"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragment.LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:orientation="horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/ic_launcher_background"
                android:layout_gravity="center_horizontal"
                android:id="@+id/logo"
                android:scaleType="fitCenter"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_280sdp"
                android:src="@drawable/mobile_login"
                android:padding="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/loginImage"/>
        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#EDEDED"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="30dp"
                    android:text="@string/login_capital"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_mobile_no"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/edtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColorHint="#909090"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:maxLength="10"
                        android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_your_phone_number"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="gone"
                    android:id="@+id/errorMsg"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/login"
                    app:elevation="0dp"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:id="@+id/btnLogin"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/signup"
                    app:elevation="0dp"
                    android:backgroundTint="@color/gray"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"
                    android:id="@+id/goToSignUp"/>
            </LinearLayout>

    </LinearLayout>

</ScrollView>